.vscode/css/work.css
/* ... */
#contact-form ul {
    list-style: none;
    border-radius: 5px;
    margin-bottom: 40px;
}

#contact-form li {
    padding: 10px;

}

#contact-form li:last-of-type {
    border-bottom: none;
}

#contact-form label {
    display: block;
    font-size: .8em;
    color: #999;
    padding-left: 5px;
}

#contact-form input, #contact-form textarea {
    width: 100%;
    padding: 5px;
    border: none;
    resize: vertical;
    background: transparent;
    color: #fff;
    font-weight: bolder;
}

input:focus {
    outline: none;
    border: none;
}

textarea:focus {
    outline: none;
    border: none;
}

.textarea {
    border-bottom: 1px solid #dfdfdf;
}

.send {
    margin-left: 50px;
    text-transform: uppercase;
    padding: 20px 30px;
    background: transparent;
    color: #dfdfdf;
    font-size: 14px;
    letter-spacing: 2px;
}

.send:hover {
    background: #dfdfdf;
    color: #101010;
}

@media(max-width: 768px) {
    #contact-form {
          margin: 5% -8%;
          width: 98%;
    }
}

/*--------------- project page --------------- */

.prev, .next p {
    color: grey;
}

.prev p {
    text-align: left;
}

.next p {
    text-align: right;
}
.box {
animation: fadeIn 2s;
width: 450px;
background-size:100%;
padding: 40px;
text-align: center;
margin-top: 5%;
margin: auto;
background: transparent;
color: white;
position: relative;
top: 100px;
font-family: 'Courier New', sans-serif;
}
.box-img{
background: url(../images/gamer.jpg);
background:cover;
background-size:100%;
width: 250px;
height: 250px;
border-radius: 50%;
transform: translatey(0px);
	animation: float 6s ease-in-out infinite;
  transition: all 0.1s ease-out;

}
.box-img:hover { 
    background:cover;
    background-size:100%;
    border-radius: 50%;
    width: 250px;
    height: 250px;
}
.box h1{
animation: fadeIn 2s;
font-size: 50px;
letter-spacing: 4px;
font-weight: 100;
}
.box h5{
animation: fadeIn 2s;
font-size: 70px;
letter-spacing: 3px;
font-weight: 100;
}
.box h2 a{
animation: fadeIn 2s;
font-size: 25px;
letter-spacing: 3px;
font-weight: 100;
color:white;
text-decoration: none;
}
.box h2 a:hover{
background: -webkit-linear-gradient(#99ff66, white);
text-decoration: none;
-webkit-background-clip: text;
-webkit-text-fill-color: transparent;
font-size: 30px;
letter-spacing: 3px;
font-weight: 100;
color:red;
text-decoration: none;
}
.box p{
animation: fadeIn 2s;
text-align: center;
}
ul{
animation: fadeIn 2s;
margin: 0px;
padding: 0;
}
.box li{
animation: fadeIn 2s;
display: inline-block;
list-style:none;
}
.box li a {
animation: fadeIn 2s;
color: white;
text-decoration: none;
font-size: 60px;
transition: all 0.5s ease-out;
}

.plane .text{
    font-size:20px;
    color:transparent;
    width:0;
    text-align: center;
    white-space: nowrap;
    margin: auto;
    transition: all 0.5s ease-out;
}
.plane:hover .text{
    text-align: center;
    color:white;
    margin: auto;
}
.box span li a {
animation: fadeIn 2s;
color: white;
text-decoration: none;
font-size: 60px;
transition: all 0.5s ease-out;
}

.box span li a:hover {
color: #ff4d4d;

}
.box li a:hover {
color:gray;
}
.box span span li a {
animation: fadeIn 2s;
color: white;
text-decoration: none;
font-size: 60px;
transition: all 0.5s ease-out;
}

.box span span li a:hover {
color: #0077B5;
}
.box span span li a {
    animation: fadeIn 2s;
    color: white;
    text-decoration: none;
    font-size: 60px;
    transition: all 0.5s ease-out;
    }
    
    .box span span span li a:hover {
    color: orange;
    }

.center {
position: absolute;
top:50%;
left:50%;
transform:translate(-50%,-50%);
}
  /* change this to change the size*/
}
.main {
    animation: fadeIn 2s;
    max-width: 1500px;
    margin: auto;
  }
  @keyframes fadeIn{
    from{
      opacity: 0;
    }
    to{
      opacity: 1;
    }
  }
  * {
    box-sizing: border-box;
  }
  
  
  /* Center website */
  .main {
    max-width: 1500px;
    margin: auto;
  }
  
  h1 {
    font-size: 50px;
    word-break: break-all;
  }
  
  .row {
    margin: 8px -16px;
  }
  
  /* Add padding BETWEEN each column */
  .row,
  .row > .column {
    padding: 4px;
    margin: auto;
  }
  
  /* Create four equal columns that floats next to each other */
  .column {
    width: 30%;
  }
  
  /* Clear floats after rows */ 
  .row:after {
    content: "";
    display: table;
    clear: both;
  }
  
  /* Content */
  .content {
    background-color: white;
    padding: 10px;
  }
  .menu-wrap {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
  
  }
  
  .menu-wrap .toggler {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
    cursor: pointer;
    width: 50px;
    height: 50px;
    opacity: 0;
  }
  
  .menu-wrap .hamburger {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    width: 60px;
    height: 60px;
    padding: 1rem;
    background: transparent;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  /* Hamburger Line */
  .menu-wrap .hamburger > div {
    position: relative;
    flex: none;
    width: 100%;
    height: 2px;
    background: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.4s ease;
  }
  
  /* Hamburger Lines - Top & Bottom */
  .menu-wrap .hamburger > div::before,
  .menu-wrap .hamburger > div::after {
    content: '';
    position: absolute;
    z-index: 1;
    top: -10px;
    width: 100%;
    height: 2px;
    background: inherit;
  }
  
  /* Moves Line Down */
  .menu-wrap .hamburger > div::after {
    top: 10px;
  }
  
  /* Toggler Animation */
  .menu-wrap .toggler:checked + .hamburger > div {
    transform: rotate(135deg);
  }
  
  /* Turns Lines Into X */
  .menu-wrap .toggler:checked + .hamburger > div:before,
  .menu-wrap .toggler:checked + .hamburger > div:after {
    top: 0;
    transform: rotate(90deg);
  }
  
  /* Rotate On Hover When Checked */
  .menu-wrap .toggler:checked:hover + .hamburger > div {
    transform: rotate(225deg);
  }
/* ... */

